# SDL2GuiHelper

./: .gitignore  CMakeLists.txt  README.md  TODO.md  TransferBuildAddDebug.sh
cmake/: FindCairo.cmake  FindOSMScout.cmake  FindPANGO.cmake  FindRSvg.cmake
common/: CMakeLists.txt
common/SDL2_gfx/: CMakeLists.txt  SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h
common/database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Statement.cpp  Statement.h
common/exception/: ArgumentException.cpp  ArgumentException.h  CMakeLists.txt  FileNotFoundException.cpp  FileNotFoundException.h  IllegalStateException.cpp  IllegalStateException.h  NotImplementedException.cpp  NotImplementedException.h  NullPointerException.cpp  NullPointerException.h  SqliteException.h
common/utils/: CMakeLists.txt  Geopos.cpp  Geopos.h  SDL2Helper.cpp  SDL2Helper.h  commonutils.cpp  commonutils.h  osmsoutlogger.cpp  osmsoutlogger.h  waitingqueue.h
dokumentation/: pi-sdl2.md
sample/: CMakeLists.txt  SampleApp.cpp  SampleApp.h  main.cpp
samples/: CMakeLists.txt
samples/maxi/: AppEvents.h  CMakeLists.txt  SampleApp.cpp  SampleApp.h  main.cpp
samples/mini/: AppEvents.h  CMakeLists.txt  SampleApp.cpp
samples/musik/: AutomationDialog.cpp  AutomationDialog.h  CMakeLists.txt  MapDialog.cpp  MapDialog.h  MusikPlayerDialog.cpp  MusikPlayerDialog.h  SampleApp.cpp  SampleApp.h
src/: AppEvents.h  CMakeLists.txt  Elements.h  ErrorMessageDialog.cpp  ErrorMessageDialog.h  IAudioManager.h  IBackendConnect.cpp  IBackendConnect.h  IMapManager.h  KernelConfig.h  MiniKernel.cpp  MiniKernel.h  SDLBase.cpp  SDLBase.h  SDLEventManager.cpp  SDLEventManager.h  rtti.h
src/exception/: CMakeLists.txt  GUIException.cpp  GUIException.h  SDLException.cpp  SDLException.h  TTFException.cpp  TTFException.h
src/gui/: CMakeLists.txt  GUI.cpp  GUI.h  GUIArtificialHorizon.cpp  GUIArtificialHorizon.hpp  GUICairoTexture.cpp  GUICairoTexture.hpp  GUICarioTexture.cpp  GUICarioTexture.hpp  GUIElement.cpp  GUIElement.h  GUIElementDecorator.cpp  GUIElementDecorator.h  GUIElementManager.cpp  GUIElementManager.h  GUIFontManager.cpp  GUIFontManager.h  GUIGauge.cpp  GUIGauge.h  GUIIconview.cpp  GUIIconview.h  GUIImageManager.cpp  GUIImageManager.h  GUIKeyboard.cpp  GUIKeyboard.h  GUIListview.cpp  GUIListview.h  GUIMapview.cpp  GUIMapview.h  GUIMediaDisplay.cpp  GUIMediaDisplay.h  GUIOnClickDecorator.cpp  GUIOnClickDecorator.h  GUIProgressbar.cpp  GUIProgressbar.h  GUIRenderer.cpp  GUIRenderer.h  GUIRoundPictureButton.cpp  GUIRoundPictureButton.h  GUIScreen.cpp  (+19 more)
src/map/: CMakeLists.txt  MapManager.cpp  MapManager.h  MapObjects.cpp  MapObjects.h  buildHessen.sh  buildmap.sh  map.ost
src/sound/: CMakeLists.txt  IAudioManager.cpp  IAudioManager.h  MediaStream.cpp  MediaStream.h  MiniAudioManager.cpp  MiniAudioManager.h  MusikAudioManager.cpp  MusikAudioManager.h  audio.h
tools/map/: README.md  map.org.ost
