cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
# Main CMake

#
# Debugging Options
#
if (CMAKE_BUILD_TYPE STREQUAL "Debug") 
    SET (CMAKE_VERBOSE_MAKEFILE 1) # Use 1 for debugging, 0 for release
ENDIF()

#Build Cmake Environment
SET(PKG_CONFIG_USE_CMAKE_PREFIX_PATH TRUE)
find_package(PkgConfig)
include(CheckCXXCompilerFlag)
include(ExternalProject)
include(CheckTypeSize)

## Use the variable PROJECT_NAME for changing the target name
SET ( PROJECT_NAME "SDL2GuiHelper" )

SET (SDL2_VER "2.0.10")
SET (SDL2_IMAGE_VER "2.0.1")
SET (SDL2_TTF_VER "2.0.12")

PROJECT(${PROJECT_NAME}) 

MESSAGE(STATUS "Try Build ${PROJECT_NAME}")
MESSAGE(STATUS "Compiler ${CMAKE_CXX_COMPILER_ID}")
MESSAGE(STATUS "Building on ${CMAKE_SYSTEM_NAME}")

SET (MAINFOLDER ${PROJECT_SOURCE_DIR})

IF("${CMAKE_EXPORT_COMPILE_COMMANDS}" STREQUAL "")
   SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
ENDIF()

SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin/")
SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib/")
SET (LIBS_DIR ${PROJECT_SOURCE_DIR}/libs/)

MESSAGE(STATUS "Build to ${EXECUTABLE_OUTPUT_PATH}")

list(APPEND CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")

CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
IF(COMPILER_SUPPORTS_CXX11)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSE()
   message(ERROR "we need c++11 to build")
ENDIF()

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DDEBUG")

MESSAGE(STATUS "Compiler Flags are ${CMAKE_CXX_FLAGS}")

FIND_PACKAGE(SDL2 REQUIRED)
IF(NOT SDL2_FOUND)
   MESSAGE(FATAL_ERROR "we need sdl2")
ENDIF()

FIND_PACKAGE(SDL2_image REQUIRED)
FIND_PACKAGE(SDL2_ttf REQUIRED)
FIND_PACKAGE(SDL2_mixer)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(sample)