message(STATUS "working on src dir")

FILE (GLOB MAIN_GUI_SRCS "*.cpp" "*.cxx" "*.cc" "*.c")

ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(exception)
ADD_SUBDIRECTORY(sound)
if(OSMSCOUT_FOUND)
    ADD_SUBDIRECTORY(map)
endif()

set(GUI_SRCS ${GUI_SRCS} ${MAIN_GUI_SRCS} ${EXCEPTION_GUI_SRCS} PARENT_SCOPE)
set(SOUND_MINI_SRCS ${SOUND_MINI_SRCS} PARENT_SCOPE)
if(OSMSCOUT_FOUND)
    set(MAP_SRCS ${MAP_SRCS} PARENT_SCOPE)
endif()