message(STATUS "working on src dir")

FILE (GLOB MAIN_GUI_SRCS "*.cpp" "*.cxx" "*.cc" "*.c")

ADD_SUBDIRECTORY(gui)
ADD_SUBDIRECTORY(exception)
ADD_SUBDIRECTORY(sound)
ADD_SUBDIRECTORY(map)

set(GUI_SRCS ${GUI_SRCS} ${MAIN_GUI_SRCS} ${EXCEPTION_GUI_SRCS} ${common_utils_SRCS_SDL2} PARENT_SCOPE)
set(SOUND_MINI_SRCS ${SOUND_MINI_SRCS} PARENT_SCOPE)
set(SOUND_MUSIK_SRCS ${SOUND_MUSIK_SRCS} PARENT_SCOPE)
set(MAP_SRCS ${MAP_SRCS} PARENT_SCOPE)
